--- a/PracticeThree/PracticeThree.csproj
+++ b/PracticeThree/PracticeThree.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespcae>UPB.PracticeThree</RootNamespcae>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference  Include="../CoreLogic/CoreLogic.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
