--- a/CoreLogic/CoreLogic.csproj
+++ b/CoreLogic/CoreLogic.csproj
@@ -7,4 +7,8 @@
     <RootNamespcae>UPB.CoreLogic</RootNamespcae>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-preview.3.23174.8" />
+  </ItemGroup>
+
 </Project>
