P3-001 Serilog reconfigurated for global use in Corelogic

--- a/PracticeThree/appsettings.UAT.json
+++ b/PracticeThree/appsettings.UAT.json
@@ -1,4 +1,9 @@
 {
   "Title": "Practica en UAT",
-  "PathToListPatients": "../listPatients.txt"
+  "PathToListPatients": "../listPatients.txt",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "None"
+    }
+  }
 }
