--- a/PracticeThree/PracticeThree.csproj
+++ b/PracticeThree/PracticeThree.csproj
@@ -19,7 +19,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.1-dev-00295" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="4.0.0-dev-00499" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-preview.3.23174.8" />
+    
   </ItemGroup>
 
 </Project>
