--- a/PracticeThree/appsettings.Development.json
+++ b/PracticeThree/appsettings.Development.json
@@ -1,4 +1,29 @@
 {
   "Title": "Practica en Dev",
-  "PathToListPatients": "../listPatients.txt"
+  "PathToListPatients": "../listPatients.txt",
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Information"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    }
+  }
 }
