--- a/CoreLogic/CoreLogic.csproj
+++ b/CoreLogic/CoreLogic.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-preview.3.23174.8" />
+    <PackageReference Include="Serilog" Version="3.0.0-dev-01970" />
   </ItemGroup>
 
 </Project>
