Logs modified for middleware

--- a/PracticeThree/appsettings.Development.json
+++ b/PracticeThree/appsettings.Development.json
@@ -6,9 +6,10 @@
       {
         "Name": "Console",
         "Args": {
-          "restrictedToMinimumLevel": "Information"
+            "restrictedToMinimumLevel": "Information",
+            "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
-      },
+    },
       {
         "Name": "File",
         "Args": {
