P3-001 QA enviroment tested (Not console logs, last message is Compilando... but it works)

--- a/PracticeThree/appsettings.UAT.json
+++ b/PracticeThree/appsettings.UAT.json
@@ -3,7 +3,7 @@
   "PathToListPatients": "../listPatients.txt",
   "Serilog": {
     "MinimumLevel": {
-      "Default": "None"
+      "Default": "Warning"
     }
   }
 }
