P3-001 UAT enviroment configurated for only console Logs

--- a/PracticeThree/appsettings.UAT.json
+++ b/PracticeThree/appsettings.UAT.json
@@ -2,8 +2,21 @@
   "Title": "Practica en UAT",
   "PathToListPatients": "../listPatients.txt",
   "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+            "restrictedToMinimumLevel": "Information",
+            "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+    }
+    ],
     "MinimumLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
     }
   }
 }
