--- a/PracticeThree/Properties/launchSettings.json
+++ b/PracticeThree/Properties/launchSettings.json
@@ -8,7 +8,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5137",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "UAT"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
